--- a/english-midterm/index.html
+++ b/english-midterm/index.html
@@ -21,11 +21,11 @@
 
 <br></br>
 <img src="images/3gs.jpg" >
-<h2> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Hello! My name is Adam Lee and I think that early Americans’ pursuit of God, glory, or gold in early American history has shaped what is now American society in the present day. I think that each time period of early American history has contributed at least a small part to modern American society because in each time period the early Americans were in pursuit of God, glory, or gold. This pursuit is what drove the early Americans into new lands, ideas, new eras of history, and many other and exciting new things! If early Americans did not pursuit God, glory, or gold, then modern American society would be much different that what is is now. </h2>
+<h2> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Hello! My name is Adam Lee and I think that early Americans’ pursuit of God, glory, or gold in early American history has shaped what is now American society in the present day. I think that each time period of early American history has contributed at least a small part to modern American society because in each time period the early Americans were in pursuit of God, glory, or gold. This pursuit is what drove the early Americans into new lands, ideas, new eras of history, and many other and exciting new things! If early Americans did not pursuit God, glory, or gold, then modern American society would be much different that what is is now. </h2>
 
 <!-- <br></br> -->
 
-<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;These time periods of early American history covered in English II,
+<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;These time periods of early American history covered in English II,
 
 <ul style="list-style-type:square">
 <li> <a href= "../english-midterm/precolonial.html"> Precolonial Time Period</a> </li>
@@ -37,7 +37,7 @@
 </ul>
 has shaped what is now American society today.
 <br></br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Now, click on one of the early American history time periods above to read about how that time period pursuit for God, glory, or gold has shaped modern American society.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Now, click on one of the early American history time periods above to read about how that time period pursuit for God, glory, or gold has shaped modern American society.
 </h2>
 <h4>
 (Note: The Precolonial Time Period is my product sample and the other time periods do not have any information but you are welcome to click on them)
