--- a/english-midterm/index.html
+++ b/english-midterm/index.html
@@ -35,7 +35,7 @@
 <li> <a href= "../english-midterm/civilwarandreconstruction.html"> Civil War and Reconstruction Time Period</a></li>
 <li> <a href= "../english-midterm/westwardexpansion.html"> Westward Expansion Time Period</a> </li>
 </ul>
-has shaped what is now American society today.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;has shaped what is now American society today.
 <br></br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Now, click on one of the early American history time periods above to read about how that time period pursuit for God, glory, or gold has shaped modern American society.
 </h2>
