--- a/english-midterm/workscited.html
+++ b/english-midterm/workscited.html
@@ -28,25 +28,25 @@
 <h1 style= "text-align:center"> Works Cited </h1>
 Christopher Columbus is believed to be from Genoa, and Italian-Americans were
      the ones who first lobbied for a Columbus Day celebration in the U.S.
-     (Wikipedia). Washington Examiner, 9 Oct. 2017,
+     (Wikipedia). Washington Examiner, 9 Oct.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2017,
      www.washingtonexaminer.com/christopher-columbus-deserves-celebration.
      Accessed 25 Jan. 2019. <br></br>
 Danzer, Gerald A, et al. “Three Worlds Meet.” The Americans, 1st ed., McDougal Littell, 2009,
 pp. 2–33.<br></br>
 “Document A.” Primary Source Supplement for Colonization and Settlement Unit Assessment,
 edited by Laura Burkhour, N.p., 2018, 1. Google Classroom, https://docs.google.com/
-document/d/17wMndnm6aCXVhpyX29X6GymRNfFsgSfdkINrk2b3Suc/edit?usp=sharing
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;document/d/17wMndnm6aCXVhpyX29X6GymRNfFsgSfdkINrk2b3Suc/edit?usp=sharing
 <br></br>
 “Document D.” Primary Source Supplement for Colonization and Settlement Unit Assessment,
 edited by Laura Burkhour, N.p., 2018, 3-4. Google Classroom, https://docs.google.com/
-document/d/17wMndnm6aCXVhpyX29X6GymRNfFsgSfdkINrk2b3Suc/edit?usp=sharing
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;document/d/17wMndnm6aCXVhpyX29X6GymRNfFsgSfdkINrk2b3Suc/edit?usp=sharing
 <br></br>
 Glory, God, & Gold. 17 Oct. 2016. The Game Crafter, 17 Oct. 2016,
      www.thegamecrafter.com/games/glory-god-gold. Accessed 25 Jan. 2019.
       <br></br>
 Rowlandson, Mary. A Narrative of the Captivity and Restoration of Mrs. Mary Rowlandson,
 Edited by Laura Burkhour, N.p., 2018, 1-4. Google Classroom, https://docs.google.com/
-document/d/1EBpmjzpyCX81EyWKP-usPf1qZPEvp9T8mjufncPwfsg/edit?usp=sharing
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;document/d/1EBpmjzpyCX81EyWKP-usPf1qZPEvp9T8mjufncPwfsg/edit?usp=sharing
 
 
 
