--- a/english-midterm/workscited.html
+++ b/english-midterm/workscited.html
@@ -46,7 +46,7 @@ Glory, God, & Gold. 17 Oct. 2016. The Game Crafter, 17 Oct. 2016,
       <br></br>
 Rowlandson, Mary. A Narrative of the Captivity and Restoration of Mrs. Mary Rowlandson,
 Edited by Laura Burkhour, N.p., 2018, 1-4. Google Classroom, https://docs.google.com/
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;document/d/1EBpmjzpyCX81EyWKP-usPf1qZPEvp9T8mjufncPwfsg/edit?usp=sharing
+document/d/1EBpmjzpyCX81EyWKP-usPf1qZPEvp9T8mjufncPwfsg/edit?usp=sharing
 
 
 
