--- a/english-midterm/precolonial.html
+++ b/english-midterm/precolonial.html
@@ -37,7 +37,8 @@
 <li>“has been simply to get, as their ultimate end, the Indians’ gold of them, and to stuff themselves with riches in a very few days” (Document A). </li>
 </ul>
  </h3>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h2>In conclusion, Christopher Columbus shaped what is now modern day American society whle pursuiting God, glory, and gold in the pre-colonial time period of early American history.</h2>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h2>In conclusion, Christopher Columbus shaped what is now modern day American society while pursuiting God, glory, and gold in the precolonial time period of early American history and made way for other
+  people to shape modern day American society in the future time periods.</h2>
     </body>
     <hr/>
 
