--- a/english-midterm/workscited.html
+++ b/english-midterm/workscited.html
@@ -29,7 +29,7 @@
 Christopher Columbus is believed to be from Genoa, and Italian-Americans were
      the ones who first lobbied for a Columbus Day celebration in the U.S.
      (Wikipedia). Washington Examiner, 9 Oct. 2017,
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; www.washingtonexaminer.com/christopher-columbus-deserves-celebration.
+    www.washingtonexaminer.com/christopher-columbus-deserves-celebration.
      Accessed 25 Jan. 2019. <br></br>
 Danzer, Gerald A, et al. “Three Worlds Meet.” The Americans, 1st ed., McDougal Littell, 2009,
 pp. 2–33.<br></br>
@@ -46,7 +46,7 @@ Glory, God, & Gold. 17 Oct. 2016. The Game Crafter, 17 Oct. 2016,
       <br></br>
 Rowlandson, Mary. A Narrative of the Captivity and Restoration of Mrs. Mary Rowlandson,
 Edited by Laura Burkhour, N.p., 2018, 1-4. Google Classroom, https://docs.google.com/
-document/d/1EBpmjzpyCX81EyWKP-usPf1qZPEvp9T8mjufncPwfsg/edit?usp=sharing
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; document/d/1EBpmjzpyCX81EyWKP-usPf1qZPEvp9T8mjufncPwfsg/edit?usp=sharing
 
 
 
