--- a/english-midterm/precolonial.html
+++ b/english-midterm/precolonial.html
@@ -38,7 +38,7 @@
 </ul>
  </h3>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h2>In conclusion, Christopher Columbus was the first person that shaped what is now modern day American society while pursuiting God, glory, and gold in the precolonial time period of early American history and made way for other
-  people to shape modern day American society in the future time periods.</h2>
+  people to shape modern day American society in the future time periods of early American history.</h2>
     </body>
     <hr/>
 
